#6243 - Fix z-index again

--- a/public/less/ssb-site-builder/ssb-site-builder.less
+++ b/public/less/ssb-site-builder/ssb-site-builder.less
@@ -49,7 +49,7 @@ a[href="https://froala.com/wysiwyg-editor"] {
 
     #componentloader .component-wrap {
         background: transparent;
-        z-index: 1;
+        // z-index: 1;
     }
 
     #componentloader {
